--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "typings": "dist/index.d.ts",
   "dependencies": {
     "@microsoft/sp-client-base": "~1.0.0",
-    "@microsoft/sp-core-library": "^1.8.1"
+    "@microsoft/sp-core-library": "^1.8.1",
+    "@microsoft/sp-http": "^1.8.1",
+    "@microsoft/sp-odata-types": "^1.8.1"
   },
   "deprecated": false,
   "devDependencies": {
     "@microsoft/sp-module-interfaces": "~1.8.1",
+    "@microsoft/sp-build-web": "~1.2.0",
     "gulp": "~4.0.1"
   },
   "bundleDependencies": [],
