--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "spfxhelper",
-  "version": "4.0.8",
+  "version": "4.1.0",
   "description": "Bundle of core functions which can be used in every project",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "dependencies": {
     "@microsoft/sp-client-base": "~1.0.0",
-    "@microsoft/sp-core-library": "^1.8.1",
-    "@microsoft/sp-http": "^1.8.1",
-    "@microsoft/sp-odata-types": "^1.8.1"
+    "@microsoft/sp-core-library": "^1.12.1",
+    "@microsoft/sp-http": "^1.12.1",
+    "@microsoft/sp-odata-types": "^1.12.1"
   },
   "deprecated": false,
   "devDependencies": {
-    "@microsoft/sp-module-interfaces": "~1.8.1",
-    "@microsoft/sp-build-web": "~1.2.0",
-    "gulp": "~4.0.1"
+    "@microsoft/sp-module-interfaces": "~1.12.1",
+    "@microsoft/sp-build-web": "~1.12.1",
+    "gulp": "~4.0.1",
+    "typescript": "^4.4.3"
   },
+  "type": "module",
   "bundleDependencies": [],
   "scripts": {
-    "build": "gulp bundle",
-    "clean": "gulp clean",
-    "test": "gulp test"
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -42,8 +43,15 @@
     "sharepoint spfx",
     "2016 sharepoint",
     "sharepoint framework",
-    "SPHttpClientBatch",
-    "SPHttpClientResponse",
-    "spHttpClient"
+    "spfx Helper",
+    "CRUD",
+    "operations",
+    "add",
+    "list",
+    "library",
+    "update",
+    "delete",
+    "REST",
+    "API"
   ]
 }
