--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "noImplicitAny": false,
         "sourceMap": false,
         "outDir": "./dist" ,
-        "declaration": true
+        "declaration": true,
+        "noEmit": false
     },
   "include": [
     "src/**/*"
